# glottie

./: ..gitignore.un~  .gitignore  .gitignore.swp  .gitignore~  .readme.md.un~  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  contributing.md  debugtools.cpp  dllrelated.h  index.html  index.js  index.wasm  index2.html  index3.html  index_old.html  linux_build  macos_build  main.cpp  misc.cpp  misc.h  old.gitattributes  old.gitignore  player.js  player.wasm  readme.md  setup-windows.ps1  stuff.tar  wasm_build  wasm_build.bat  windowstarget.h
.github/workflows/: gh_pages.yml  main.yml  wasm.yml
animate/: animate.h  prep_transform.cpp  transform.cpp
deserializer/: associate.cpp  effects.h  helpers.cpp  helpers.h  layers.cpp  layers.h  output  properties.cpp  properties.h  shapes.cpp
doc/: animation.md  contributing.md  executionsequence.md  geometry.md  naming_convention.md  render.md  statemachine.md
examples/wasm/: index.html~  index2.html  player.js  player.wasm
gl/: assignAttributeNames.cpp  associateShaderAttributes.cpp  create_attribute_list.pl  generate_glsl.pl  gl.cpp  gl.h  gl_old.cpp  it_adjust.cpp  prep.cpp  triangulate.cpp  vertexShader.cpp
lib/cmake/SDL2/: sdl2-config.cmake
lib/pkgconfig/: sdl2.pc
lottie/: readme.md
lottie/player/: '  .main.cpp.swp  .main.h.swp  .misc.cpp.swl  .misc.cpp.swm  .misc.cpp.swn  .misc.cpp.swo  .misc.cpp.swp  .misc.h.swn  .misc.h.swo  .misc.h.swp  2  :  :w  ;  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  \  a.out  cmake_install.cmake  configure.h  configure.h.in  custom_build  glottie  index.html  jsonstring.blue_octopus  jsonstring.h  jsonstring.house  jsonstring.little_flame  jsonstring.monster_forest  jsonstring.newton  jsonstring.octopus_hearts  linux_build  linuxtarget.h  llvm_build  lottieplayer  macos_build  macos_build_backup  main.cpp  (+17 more)
lottie/player/animate/: animate.h  animate.h.backup  prep_composite.cpp  prep_parent.cpp  transform.cpp  transform.cpp.backup  transform.cpp.backup2
lottie/player/deserializer/: .associate.cpp.swo  .associate.cpp.swp  .deserializer.cpp.swo  .deserializer.cpp.swp  .layers.cpp.swp  .layers.h.swp  .object_associate.cpp.swp  .properties.cpp.swn  .properties.cpp.swo  .properties.cpp.swp  .properties.h.swo  .properties.h.swp  .shapes.cpp.swp  .shapes.h.swo  .shapes.h.swp  ]  assoc_.cpp  associate.cpp  associate.cpp.backup  associate2.cpp  deserializer.cpp  deserializer2.cpp  effects.cpp  effects.h  helpers.cpp  helpers.h  layers.cpp  layers.h  object_associate.cpp  properties.cpp  properties.h  shapes.cpp  shapes.h
lottie/player/doc/: .contributing.md.swp  .executionsequence.md.swp  .statemachine.md.swp  executionsequence.md  statemachine.md
lottie/player/emscripten/: emscripten.cpp
lottie/player/gl/: .gl.cpp.swp  .prep.cpp.swo  .prep.cpp.swp  assignAttributeNames.cpp  associateShaderAttributes.cpp  associateShaderAttributes.pl  associateShaderAttributes.pl.backup2  attribute_names.cpp  create_attribute_list.pl  generate_glsl.pl  generate_glsl.pl.backup  gl.cpp  gl.cpp.backup  gl.cpp.backup2  gl.cpp.backup3  gl.h  it_adjust.cpp  parentage.cpp  prep.cpp  prep.cpp.earcut  prep.cpp_earcut  prep_transform.cpp  triangulate.cpp  triangulate.cpp.backup  vertexShader.cpp
lottie/player/lib/: libSDL2-2.0.0.dylib
lottie/player/lottieplayer.dSYM/Contents/Resources/DWARF/: lottieplayer
lottie/player/player.dSYM/Contents/: Info.plist
lottie/player/winclude/: angle_gl.h
lottie/player/winclude/EGL/: egl.h  eglext.h  eglext_angle.h  eglplatform.h
lottie/player/winclude/GLES2/: gl2ext.h
lottie/player/winclude/GLSLANG/: ShaderLang.h
lottie/player/winclude/platform/: Platform.h
lottie/player/winlib/angle/: angle_image_util.lib
lottie/player/www/: .index.html.swp  index.html  index2.html  player.js  player.wasm  serve_this
lottieplayer.dSYM/Contents/: Info.plist
player/: .misc.cpp.swn  CMakeLists.txt  configure.h  debugtools.cpp  jsonstring.group_work  jsonstring.sun  jsonstring.sun_clouds  mactarget.h  main.cpp  main.h  misc.cpp  misc.old  player  readme.md  test.js  triangle.c  windowstarget.h
player/animate/: transform.cpp  transform.cpp.backup3
player/deserializer/: .deserializer.cpp.swo  .serializer.cpp.swp  associate.cpp  associate_MAY27.cpp  deserializer.cpp  properties.cpp  shapes.h
player/doc/: contributing.md
player/emscripten/: emscripten.cpp
player/gl/: associateShaderAttributes.pl  associateShaderAttributes.pl.backup  gl.cpp  gl.cpp.backup4  gl.cpp.current  gl.cpp.exp  gl.cpp.latest  gl.cpp.newest  gl.h  prep.cpp.backup  prep.cpp.mine  prep.cpp_own_triangulation  triangulate.cpp.backup
player/player.dSYM/Contents/Resources/DWARF/: player
player/winlib/angle/: libEGL.exp  libEGL.lib  libGLESv2.exp
player/www/: index.html  index2.html  index_old.html  player.wasm
winclude/: export.h
winclude/GLES2/: gl2ext_angle.h
winclude/GLSLANG/: ShaderVars.h
winclude/KHR/: khrplatform.h
winclude/platform/: WorkaroundsD3D.h
winlib/angle/: angle_common.lib  angle_gpu_info_util.lib  libGLESv2.lib
